--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<html>
-    <body>
-        <h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>
             How are you?
         </h2>
         <a href="good.html"> <button id="good"> Good </button></a>
         <button id="not"> Not good </button>
-        
+</body>
+</html>
